--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -11,7 +11,8 @@
       "value": "&#048;&#054;&#046;&#055;&#050;&#046;&#052;&#057;&#046;&#055;&#051;&#046;&#050;&#050;"
     },
     "email": {
-      "label": "E-mail"
+      "label": "E-mail",
+      "value": "&#103;&#105;&#108;&#108;&#101;&#115;&#046;&#114;&#121;&#097;&#110;&#046;&#100;&#101;&#118;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"
     },
     "contract_type": {
       "label": "Type de contrat",
